--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -55,3 +55,10 @@ body {
     line-height: 12vmin;
     font-weight: 100;
     }
+    #calculator
+    
+    ::selection {
+      color: inherit; 
+      background-color: transparent;
+    }
+  
