--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -10,17 +10,17 @@ body {
   text-transform: translateY(-50%);
   margin: 0 auto; }
   #calculator #result {
-    background-color: #F3F3F3;
-    height: 14vmin; 
+    background-color: #6699FF;
+    height: 14vmin;
     font-weight: 100;
-    font-size: 8vmin; 
+    font-size: 8vmin;
     text-align: right;
     padding-right: 2vmin
   }
   #calculator #preview {
-    background-color: #F2F2F2;
-    height: 14vmin; 
-    font-size: 7vmin; 
+    background-color: #6699FF;
+    height: 14vmin;
+    font-size: 7vmin;
     text-align: right;
     padding-right: 2vmin;
 }
@@ -31,8 +31,6 @@ body {
     font-size: 8vmin;
     text-align: center;
     line-height: 15vmin;
-    border-style: solid;
-    border-width: 1px;
     font-weight: 100;
 
     &:hover {
@@ -49,16 +47,12 @@ body {
     color: #F3F3F3;
     text-align: center;
     font-size: 4vmin;
-    border-style: solid;
-    border-width: 1px;
-    border-color: white;
     line-height: 12vmin;
     font-weight: 100;
     }
     #calculator
-    
+
     ::selection {
-      color: inherit; 
+      color: inherit;
       background-color: transparent;
     }
-  
